PRODUCTION/webserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: demo-backend-init-app1
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: demo
    app.kubernetes.io/part-of: demo
    app.openshift.io/runtime: dotnet
  name: demo-backend
  namespace: init
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: demo-backend-init-app1
    app.kubernetes.io/name: demo
  type: ClusterIP
