PRODUCTION/webserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    route.openshift.io/destination-ca-certificate-secret: backend-ca-cert
    route.openshift.io/termination: edge
  labels:
    app.kubernetes.io/instance: demo-backend-init-app1
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: demo
    app.kubernetes.io/part-of: demo
    app.openshift.io/runtime: dotnet
  name: demo-backend-init
  namespace: init
spec:
  rules:
    - host: backend-demo-init.cluster-2mbd4.dynamic.redhatworkshops.io
      http:
        paths:
          - backend:
              service:
                name: demo-backend
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - {}
