PRODUCTION/webserver/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"route.openshift.io/destination-ca-certificate-secret":"backend-ca-cert","route.openshift.io/termination":"edge"},"labels":{"app.kubernetes.io/instance":"demo-backend-init-app1","app.kubernetes.io/managed-by":"argocd","app.kubernetes.io/name":"demo","app.kubernetes.io/part-of":"demo","app.openshift.io/runtime":"dotnet"},"name":"demo-backend-init","namespace":"init"},"spec":{"rules":[{"host":"backend-demo-init. [...]
    route.openshift.io/destination-ca-certificate-secret: backend-ca-cert
    route.openshift.io/termination: edge
  creationTimestamp: '2024-03-20T15:06:24Z'
  labels:
    app.kubernetes.io/instance: demo-backend-init-app1
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: demo
    app.kubernetes.io/part-of: demo
    app.openshift.io/runtime: dotnet
  name: demo-backend-init-cvsdt
  namespace: init
  ownerReferences:
    - apiVersion: networking.k8s.io/v1
      controller: true
      kind: Ingress
      name: demo-backend-init
      uid: fd3e38d9-5c8c-40f0-a343-915f580dbf23
  resourceVersion: '26518308'
  uid: 24b0a5ee-e071-4e3b-ac88-77bc211d5cc0
spec:
  host: backend-demo-init.cluster-2mbd4.dynamic.redhatworkshops.io
  path: /
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: demo-backend
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - lastTransitionTime: '2024-03-20T15:06:24Z'
          status: 'True'
          type: Admitted
      host: backend-demo-init.cluster-2mbd4.dynamic.redhatworkshops.io
      routerCanonicalHostname: router-default.apps.cluster-2mbd4.dynamic.redhatworkshops.io
      routerName: default
      wildcardPolicy: None
